--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,7 +9,11 @@ spring.datasource.password=Restoration1uy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.defer-datasource-initialization=false
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
 spring.sql.init.platform=dev
+
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+spring.liquibase.enabled=true
+spring.liquibase.contexts=development
