--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -17,3 +17,6 @@ spring.sql.init.platform=dev
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 spring.liquibase.enabled=true
 spring.liquibase.contexts=development
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
