--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@ spring.application.name=restoration-v1
 server.port=8080
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mysql-database.c7komaqyu8k8.sa-east-1.rds.amazonaws.com/restorationDB?useSSL=false&serverTimezone=America/Mexico_City&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://restorationdb.cpcoauo0sjoy.us-east-1.rds.amazonaws.com/restorationDB?useSSL=false&serverTimezone=America/Mexico_City&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
 spring.datasource.username=restoadmin
 spring.datasource.password=Restoration1uy
 
@@ -15,7 +15,7 @@ spring.sql.init.mode=always
 spring.sql.init.platform=dev
 
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-spring.liquibase.enabled=true
+spring.liquibase.enabled=false
 spring.liquibase.contexts=development
 
 spring.servlet.multipart.max-file-size=10MB
